--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:docker": "jest --runInBand"
+    "test:docker": "jest --runInBand",
+    "test:ci": "jest --runInBand --ci"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
